--- a/intro-web/index.html
+++ b/intro-web/index.html
@@ -1,14 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda de naranjas</title>
-    <link rel="shortcut icon" href="https://cdn.icon-icons.com/icons2/91/PNG/512/orange_player_16444.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cdn.icon-icons.com/icons2/91/PNG/512/orange_player_16444.png"
+        type="image/x-icon">
 </head>
+
 <body>
-    <h1>Tienda de naranjas 🔥</h1>
+    <h1>Tienda de naranjas ⏳</h1>
     <p>Compra naranjas en descuento</p>
     <a href="https://www.jango.com">Click aquí para comprar</a>
+    <a href="https://www.google.com">Goooogle</a>
+
+    <!-- alt + shift + a -->
+    <!-- hr: horizontal row, linea que divide secciones -->
+    <!-- br: break. Salto de linea -->
+    <br><br>
+    <hr>
+    <br><br>
+
+    <img src="https://static.soapcentral.com/editor/2024/10/ce100-17286510940673.jpg" alt="portada de pelicula teacup"
+        width="400">
+
+    <div>
+        <h1>Lista de películas</h1>
+
+        <!-- Lista ordenada -->
+
+        <ol>
+            <li>
+                <a href="https://www.justwatch.com/co/serie/from" target="_blank">From</a>
+            </li>
+            <li>
+                <a href="https://www.justwatch.com/co/serie/pinguino" target="_blank">El Pingüino</a>
+            </li>
+            <li>
+                <a href="https://www.justwatch.com/co/serie/teacup" target="_blank">Teacup</a>
+            </li>
+            <li>
+                <a href="https://www.justwatch.com/co/serie/special-ops-lioness" target="_blank">Lioness</a>
+            </li>
+            <li>
+                <a href="https://www.justwatch.com/co/serie/grotesquerie" target="_blank">Grotesquerie</a>
+            </li>
+        </ol>
+    </div>
+
+
+
+
 </body>
+
 </html>
